Fixed feature columns on mobile view.

--- a/default.css
+++ b/default.css
@@ -225,6 +225,16 @@ ul.contact li a.icon-rss:before {
     grid-gap: 20px;
 }
 
+@media (max-width: 800px) {
+    .grid-three {
+        display: grid;
+        grid-template-columns: 100%;
+        grid-auto-rows: 1fr;
+        grid-gap: 20px;
+    }
+
+}
+
 #header-wrapper {
     background: #333333;
     width: 100%;
